--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,13 @@
     ],
     "require": {
         "php": ">=5.4.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.4.*"
+    },
+    "autoload": {
+        "psr-0": {
+            "Ical": "src/"
+        }
     }
 }
